unpackaged/main/default/objects/Account/fields/Main_competitor__c.field-meta.xml
<CustomField>
    <fullName>Main_competitor__c</fullName>
    <label>Main competitor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>