unpackaged/main/default/objects/Account/fields/New_account_details__c.field-meta.xml
<CustomField>
    <fullName>New_account_details__c</fullName>
    <label>New account details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>