unpackaged/main/default/objects/Account/fields/Next_stage__c.field-meta.xml
<CustomField>
    <fullName>Next_stage__c</fullName>
    <label>Next stage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>