unpackaged/main/default/objects/Account/fields/Pre_call_info__c.field-meta.xml
<CustomField>
    <fullName>Pre_call_info__c</fullName>
    <label>Pre call info</label>
    <length>100</length>
    <type>Text</type>
</CustomField>