unpackaged/main/default/objects/Account/fields/Pre_call_notes__c.field-meta.xml
<CustomField>
    <fullName>Pre_call_notes__c</fullName>
    <label>Pre call notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>