unpackaged/main/default/objects/Account/fields/Sandbox_account__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_account__c</fullName>
    <label>Sandbox account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>