unpackaged/main/default/objects/Account/fields/Test_UAT_Fix__c.field-meta.xml
<CustomField>
    <fullName>Test_UAT_Fix__c</fullName>
    <label>Test UAT Fix</label>
    <length>100</length>
    <type>Text</type>
</CustomField>